2001-02-26  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* parse.y (gobble_leading_white_space): Handle CRLF here too.
	* lex.l (check_for_garbage_after_fcn_def): Likewise.

	* lex.l: Add numeric value of character to error message for
	unrecognized characters.

2001-02-22  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* DLD-FUNCTIONS/minmax.cc (EMPTY_RETURN_CHECK): For empty matrix
	args, make Octave's min	and max behave like Matlab.

2001-02-18  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* OPERATORS/op-s-s.cc (el_or, el_and): Return bool value.

2001-02-14  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* pt-binop.cc (tree_boolean_expression::rvalue):
	Don't cast result to double.

	* OPERATORS/op-b-b.cc: Allow & and | operators to return bool values.

2001-02-09  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* data.cc (DATA_REDUCTION): Undo previous change.

2001-02-13  Matthew W. Roberts  <matt@nephi.tamu.edu>

	* load-save.cc (Fload): Accept -4 as an alias for -v4 and -mat4-binary.
	(Fsave): Likewise.

2001-02-13  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* lex.l (lexical_feedbac::init):
	Initialize looking_at_matrix_or_assign_lhs too.

2001-02-09  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* data.cc (DATA_REDUCTION): Allow FCN(x,0) to be equivalent to FCN(x).

2001-02-06  Mumit Khan  <khan@nanotech.wisc.edu>

	* oct-stream.cc (octave_scan): Partially implement and specialize
	for char*.  Delete the old template instantiations.
	(BEGIN_S_CONVERSION): Use strings instead of ostrstreambuf.
	(octave_base_stream::do_scanf): Pass correct parameter to
	do_scan_conv.

2001-02-05  Mumit Khan  <khan@nanotech.wisc.edu>

	* pr-output.cc (set_format): Add std:: namespace qualifier as
	needed.

	* oct-stream.cc (octave_scan): Implement, and specialize for
	char*. Delete the old template instantiations.
	(BEGIN_S_CONVERSION): Use strings instead of ostrstreambuf.
	(octave_base_stream::do_scanf): Pass correct parameter to
	do_scan_conv.

	* Makefile.in (TEMPLATE_AR, TEMPLATE_ARFLAGS): Use to create